feat(open-data-client): refactor to use strong-typed Location enum for forecasts
- **Improvement:**
  - Replaced string-based location representation with `Location` enum to ensure type safety across `EnergyChartsForecastProvider` and related modules.
  - Updated APIs and their usage to utilize the `Location` enum, enhancing readability and maintainability.

- **Testing:**
  - Updated test cases to validate `Location` enum integration.
  - Enhanced mock setups to work with the refactored `Location` typing.

- **Documentation:**
  - Adjusted README to reflect updates to example usage and Open Data forecasting configuration.

- **Code Cleanup:**
  - Reorganized imports for better readability.
  - Applied minor formatting and grammar adjustments in comments and documentation.